# airgap-llm-edu

./: .env.example  .gitignore  CURRICULUM.md  README.md  SETUP.md  docker-compose.openwebui.yml  docker-compose.yml  instructor_guide.md  pyproject.toml
assets/diagrams/: airgap_architecture.md  rag_pipeline.md
common/: __init__.py  ko_tokenizer.py  llm.py  loaders.py  nltk_bootstrap.py  plot_utils.py
data/: corpus_ko.txt  kg_sample.csv  pii_samples.jsonl
data/pdf/: README.md  sample_compliance.docx  전자금융거래법(법률)(제21205호)(20251216).hwpx
day1/session1_llm_basics/: 01_transformer_attention.ipynb  02_tokenization_deep.ipynb  03_embeddings_deep.ipynb  03_langchain_prompt_basics.ipynb  04_llm_api_and_inference.ipynb  05_agent_and_langgraph.ipynb
day1/session2_rag_basics/: 01_loader_chunking.ipynb  02_vectorstore_comparison.ipynb  03_retriever_patterns.ipynb  04_rag_pipeline_lcel.ipynb  05_eval_ragas.ipynb  06_agent_and_langgraph.ipynb  06_llm_as_judge.ipynb  _capstone_baseline.json
day1/session2_rag_basics/_store/: efinance_regulation.md
day1/session2_rag_basics/_store/chroma/: chroma.sqlite3
day1/session2_rag_basics/_store/chroma_retriever/: chroma.sqlite3
day1/session2_rag_basics/_store/efinance_rag/: chroma.sqlite3
day1/session2_rag_basics/_store/faiss/: index.faiss  index.pkl
day1/session3_capstone/: 01_streamlit_agent_app.ipynb  app.py
day2/: 01_hybrid_ensemble.ipynb  02_reranking.ipynb  03_langgraph_basic.ipynb  04_naive_rag_relevance.ipynb  05_self_rag_langgraph.ipynb  06_adaptive_rag.ipynb  README.md
day2/session3_advanced_graphrag/: 01_hybrid_ensemble.ipynb  01_reranking.ipynb  02_hybrid_ensemble.ipynb  02_reranking.ipynb  03_langgraph_basic.ipynb  03_query_transform.ipynb  04_contextual_compression.ipynb  05_self_crag_langgraph.ipynb  06_graphrag_neo4j_and_ms.ipynb  07_agentic_rag.ipynb  08_adaptive_rag.ipynb
day2/session4_security_webservice/: 01_regulations_architecture.ipynb  02_pii_and_guardrails.ipynb  03_openwebui_ollama.md  04_custom_service_fastapi_gradio.ipynb  05_airgap_migration.ipynb
